--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,13 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
-
+        #url: '%env(resolve:DATABASE_URL)%'
+        driver: pdo_mysql
+        host: localhost
+        port: null
+        dbname: agentjo_mlsFeed
+        user: agentjo_mlsFeed
+        password: '2wsxCDE#'
+        charset: UTF8
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '13'
