--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,6 +17,13 @@ framework:
     php_errors:
         log: true
 
+    # the IP address (or range) of your proxy
+    # trusted_proxies: '192.168.10.50,192.168.10.51'
+    # trust *all* "X-Forwarded-*" headers
+    # trusted_headers: [ 'x-forwarded-for', 'x-forwarded-host', 'x-forwarded-proto', 'x-forwarded-port' ]
+    # or, if your proxy instead uses the "Forwarded" header
+    # trusted_headers: [ 'forwarded' ]
+
 when@test:
     framework:
         test: true
